[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/UI/Themes/RetmisTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Fonts/BasicBlockFont24.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Game/PauseScreen/PauseMenu.gd" type="Script" id=3]

[node name="Paused" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 0.901961 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -397.0
margin_top = -183.0
margin_right = 397.0
margin_bottom = 183.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 794.0
margin_bottom = 366.0
alignment = 1

[node name="PausedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 794.0
margin_bottom = 24.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Paused"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 350.0
margin_right = 794.0
margin_bottom = 366.0
alignment = 1

[node name="ToMenuButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 395.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../ContinueButton")
focus_neighbour_right = NodePath("../ContinueButton")
focus_next = NodePath("../ContinueButton")
focus_previous = NodePath("../ContinueButton")
size_flags_horizontal = 3
text = "Return to main menu"

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 399.0
margin_right = 794.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../ToMenuButton")
focus_neighbour_right = NodePath("../ToMenuButton")
focus_next = NodePath("../ToMenuButton")
focus_previous = NodePath("../ToMenuButton")
size_flags_horizontal = 3
text = "Continue"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ToMenuButton" to="." method="_on_ToMenuButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
